// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CustomForgotPassword when authData includes a username or when the delivery state is set renders the Create Password view 1`] = `
<div
  className="Form__formContainer___1GA3x"
>
  <div
    className="Form__formSection___1PPvW"
  >
    <div
      className="Section__sectionHeader___2djyg"
    >
      <Title>
        Create a new password
      </Title>
      <Lead>
        If an account exists for foo@example.com, we emailed a 6-digit verification code to it. Enter the code below to confirm your email and reset your password.
      </Lead>
    </div>
    <form>
      <div
        className="Section__sectionBody___ihqqd"
      >
        <InputText
          autoComplete="off"
          label="6-digit code"
          name="code"
          onChange={[Function]}
          smallLabel={true}
        />
        <Button
          className="margin-top-2"
          name="resendCode"
          onClick={[Function]}
          variation="unstyled"
        >
          Resend the code
        </Button>
        <InputText
          autoComplete="new-password"
          hint="Your password must be at least 8 characters long and include numbers and letters."
          label="New password"
          name="password"
          onChange={[Function]}
          smallLabel={true}
          type="password"
        />
      </div>
      <div
        className="Section__sectionFooter___1T54C"
      >
        <div
          className="Section__sectionFooterPrimaryContent___2r9ZX"
        >
          <Button
            name="submit"
            onClick={[Function]}
          >
            Set new password
          </Button>
        </div>
        <div
          className="Section__sectionFooterSecondaryContent___Nj41Q"
        >
          <Button
            className="text-bold"
            name="backToSignIn"
            onClick={[Function]}
            variation="unstyled"
          >
            Back to log in
          </Button>
        </div>
      </div>
    </form>
  </div>
</div>
`;

exports[`CustomForgotPassword when the delivery state is undefined renders the Enter Email view 1`] = `
<div
  className="Form__formContainer___1GA3x"
>
  <div
    className="Form__formSection___1PPvW"
  >
    <div
      className="Section__sectionHeader___2djyg"
    >
      <Title>
        Forgot your password?
      </Title>
      <Lead>
        If an account exists for the email you provide, we will email a 6-digit verification code to it.
      </Lead>
    </div>
    <form>
      <div
        className="Section__sectionBody___ihqqd"
      >
        <div>
          <Component
            theme={
              Object {
                "mockTheme": true,
              }
            }
          >
            <Component
              theme={
                Object {
                  "mockTheme": true,
                }
              }
            >
              Email address
               *
            </Component>
            <Component
              autoFocus={true}
              data-test="username-input"
              key="username"
              name="username"
              onChange={[Function]}
              placeholder=" "
              theme={
                Object {
                  "mockTheme": true,
                }
              }
            />
          </Component>
        </div>
      </div>
      <div
        className="Section__sectionFooter___1T54C"
      >
        <div
          className="Section__sectionFooterPrimaryContent___2r9ZX"
        >
          <Button
            name="submit"
            onClick={[Function]}
          >
            Send code
          </Button>
        </div>
        <div
          className="Section__sectionFooterSecondaryContent___Nj41Q"
        >
          <Button
            className="text-bold"
            name="backToSignIn"
            onClick={[Function]}
            variation="unstyled"
          >
            Back to log in
          </Button>
        </div>
      </div>
    </form>
  </div>
</div>
`;
